--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "name": "delta_project",
   "version": "1.0.0",
   "description": "ye delta ka major Project hai",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "Abhishek Anand",
